Added the styles

--- a/tasks.html
+++ b/tasks.html
@@ -2,11 +2,14 @@
 <html lang="en">
     <head>
         <title>Tasks</title>
+        <link rel="stylesheet" href="css/style.css">
         <script src="tasks.js"></script>
     </head>
     <body>
         <h1>Tasks</h1>
-        <ul id="tasks"></ul>
+        <ul id="highest">Highest Priority</ul>
+        <ul id="medium">Medium Priority</ul>
+        <ul id="lowest">Lowest Priority</ul>
         <form>
             <input id="task" placeholder = "New Task" type="text">
             <input id="submit" type="submit">
