--- a/tasks.html
+++ b/tasks.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <div id="clock"></div>
     <head>
         <title>Tasks</title>
         <link rel="stylesheet" href="css/style.css">
@@ -25,5 +26,6 @@
             <input id="submit" type="submit">
             <input id="clear" type="button" value="Clear List">
         </form>
+        <ul id="discarded">Recently Discarded</ul>
     </body>
 </html>
