--- a/tasks.html
+++ b/tasks.html
@@ -8,9 +8,18 @@
     </head>
     <body>
         <h1>Tasks</h1>
-        <ul id="highest">Highest Priority</ul>
-        <ul id="medium">Medium Priority</ul>
-        <ul id="lowest">Lowest Priority</ul>
+        <div class="flex-container">
+            <div class = "flex-child magenta">
+                <ul id="highest">Highest Priority</ul>
+            </div>
+            <div class = "flex-child magenta">
+                <ul id="medium">Medium Priority</ul>
+            </div>
+            <div class = "flex-child green">
+                <ul id="lowest">Lowest Priority</ul>
+            </div>
+        </div>
+        <br>
         <form>
             <input id="task" placeholder = "New Task" type="text">
             <!-- Same as new line -->
